# Danitech-master

./: .gitignore  .gitmodules  README.md
Brainstorm/o3d/: 2023-03-09-11-59-56_OS-0-128-992037000169-1024x10.json  PointCloud_ros_load.py  Reconstruction_methods.py  ScreenCamera_2023-05-24-17-14-21.json  dict_test.py  o3d_rotation.py  rayCastTest.py  show_local_map.py  show_rays.py  tasklist.md  test_code.py  test_cuda.py  øøh.txt
demo/: CMakeLists.txt  package.xml
demo/launch/: controller_demo.launch.py  localization_demo.launch.py
lmao/: package.xml  setup.cfg  setup.py
lmao/launch/: bag_localize.launch.py
lmao/lmao/: Get_lidar_angles.py  Localizer.py  LocalizerNoRos.py  MapConstruction.py  RaycastLocalization.py  RaycastLocalization_new.py  cosine_dist.py  lmao_lib  prep_for_inflation.py  rotate_test.py  run_test copy.sh  run_test.sh  tiletest.py
lmao_interfaces/: CMakeLists.txt  package.xml
lmao_interfaces/srv/: GetPointData.srv
lmao_lib/: package.xml  setup.cfg  setup.py
lmao_lib/lmao_lib/: lidar.py  mapping.py  world.py
mapping/wagon_octomap/: CMakeLists.txt  package.xml
mapping/wagon_octomap/launch/: octomap_mapping.launch.xml  octomap_saver.launch.xml
mapping/wagon_octomap/maps/: testmap.bt
other/: fastdds.xml  super_client_configuration_file.xml
other/world/: heightmap_world.sdf  inspo.sdf
pointcloud_filters/: CMakeLists.txt  package.xml  pointcloud_filtersConfig.cmake.in  pointcloud_filtersConfigVersion.cmake.in
pointcloud_filters/src/: pointcloud_box_filter.cpp
rviz/: base_and_scan.rviz
testing/: package.xml  setup.py
testing/Plots/: drift_plot.py  drift_plot_pickle.py
testing/testing/: 3d_map_plot.ipynb  DepthCamera_2023-05-24-13-52-06.json  RenderOption_2023-05-24-13-45-43.json  RenderOption_2023-05-24-13-46-17.json  RenderOption_2023-05-24-13-46-18.json  ScreenCamera_2023-05-24-14-20-32.json  ScreenCamera_2023-05-24-14-20-38.json  controller_loader_plot.ipynb  drift_plot.py  odom_planner_plot.ipynb  odom_test.py  pickle_bag_gt.py  pickle_loader.py  pickle_loader_plotter.ipynb  subs_and_plots.py
wagon_bringup/: package.xml  setup.cfg  setup.py
wagon_bringup/config/: joy-params.yaml  joy_teleop_example.yaml
wagon_bringup/launch/: joy-launch.py  joy_teleop.launch.py  teleop_joy.launch.py  wagon_bringup.launch.py  (+2 more)
wagon_description/: CMakeLists.txt  frames_2022-09-12_23.51.25.gv  package.xml
wagon_gazebo/: package.xml  setup.cfg  setup.py
wagon_isaac/: package.xml  setup.cfg  setup.py
wagon_navigation/: Vinkel retteark.ggb  package.xml  setup.cfg  setup.py
wagon_node/: package.xml  setup.cfg  setup.py
wagon_sensors/: CMakeLists.txt  package.xml
wagon_sensors/sensors_launch/: CMakeLists.txt  package.xml
wagon_sensors/sensors_launch/launch/: dual_ekf_navsat_example.launch.py  odom_ekf.launch.py  ublox_gps_node-launch.py
wagon_sensors/sensors_launch/launch/ekf/: dual_ekf_navsat_example.launch.py  dual_ekf_navsat_sim.launch.py  imu_twist.launch.py  navsat_transform.launch.py
wagon_sensors/sensors_launch/launch/gps/: ublox_gps_node-composed-launch.py  ublox_gps_node-launch.py
wagon_sensors/sensors_launch/launch/lidar/: passthrough_filter.launch  passthrough_filter.launch.py
wagon_sensors/sensors_launch/params/ekf/: dual_ekf_navsat_example.yaml  dual_ekf_navsat_sim.yaml  imu_twist.yaml  navsat_transform.yaml
wagon_sensors/sensors_launch/params/ublox_gps/: c94_m8p_rover.yaml  zed_f9p.yaml
wheel_odometry/: package.xml  setup.cfg  setup.py
wheel_vel_translator/: package.xml  setup.cfg  setup.py
(+98 files in other folders)
